--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: default
-title: Youtube Channel Website
+title: TNPSC Quickies
 ---
 
 <!-- This loops through the paginated posts -->
 {% for post in paginator.posts %}
 <h1><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h1>
 <p class="author">
-  <span class="date">{{ post.date }}</span>
+  <span class="date">{{ post.date | date: "%-d %B %Y" }}</span>
 </p>
 <div class="content">
   {{ post.content }}
