added includes changes

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -13,7 +13,7 @@ enabled: true
 <div class="card-group mt-2">
 
     {% for post in paginator.posts %}
-    {% include landing.html %}
+    {% include blog/post-card.html %}
     {% endfor %}
 
 </div>
