--- a/pages/blog.html
+++ b/pages/blog.html
@@ -9,32 +9,4 @@ enabled: true
 ---
 
 {% include blog/search.html %}
-
-<div class="card-group mt-2">
-
-    {% for post in paginator.posts %}
-    {% include blog/post-card.html %}
-    {% endfor %}
-
-</div>
-
-{% if paginator.total_pages > 1 %}
-
-<section class="pagination">
-
-    {% if paginator.previous_page %}
-    <div class="pagination__prev">
-        <a href="{{ paginator.previous_page_path | relative_url }}" class="button button--large"><i
-                class="fa fa-angle-left" aria-hidden="true"></i> <span>Newer Posts</span></a>
-    </div>
-    {% endif %}
-    {% if paginator.next_page %}
-    <div class="pagination__next">
-        <a href="{{ paginator.next_page_path | relative_url }}" class="button button--large"><span>Older Posts</span> <i
-                class="fa fa-angle-right" aria-hidden="true"></i></a>
-    </div>
-    {% endif %}
-
-</section>
-
-{% endif %}
+{% include blog/index.html %}
